--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -3,6 +3,7 @@
     <img src="/assets/images/octoblu.png" height="50px"/>
   </div>
 
+  <flow-node-setup  node-type="activeFlow.selectedFlowNode"></flow-node-setup>
   <flow-node-editor flow-node="activeFlow.selectedFlowNode"></flow-node-editor>
 
   <div class="flow-top-bar" layout="row" layout-phone="column" layout-tablet="column">
