--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -1,4 +1,4 @@
-<div class="materialize" layout="row">
+<div class="materialize" layout="row" md-theme="indigo">
   <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="navIsOpen">
     <md-toolbar class="md-medium-tall md-indigo-theme" layout-align="center">
       <a href ng-click="closeNav()" ui-sref="material.home" class="navbar-logo">
