--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -1,6 +1,6 @@
-<div class="materialize" layout="row" md-theme="indigo">
+<div class="materialize" layout="row" md-theme="octo-blue">
   <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="navIsOpen">
-    <md-toolbar class="md-medium-tall md-indigo-theme" layout-align="center">
+    <md-toolbar class="md-medium-tall md-octo-blue-theme" layout-align="center">
       <a href ng-click="closeNav()" ui-sref="material.home" class="navbar-logo">
         <img src="/assets/images/octoblu_logo.png">
       </a>
