--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,7 +1,7 @@
   <div flex layout="column">
     <div flex layout="row">
       <div flex="30" layout="column">
-        <md-toolbar md-theme="indigo">
+        <md-toolbar md-theme="octo-blue">
           <h2 class="md-toolbar-tools page-heading">
             <a href class="menu-icon" ng-click="toggleNav()">
               <i class="fa fa-bars"></i>
