--- a/public/pages/node-wizard/index.html
+++ b/public/pages/node-wizard/index.html
@@ -1,4 +1,4 @@
-<md-toolbar md-theme="indigo">
+<md-toolbar md-theme="octo-blue">
   <h2 class="md-toolbar-tools page-heading">
     <a href class="menu-icon" ng-click="toggleNav()">
       <i class="fa fa-bars"></i>
