The sidenav is a little more FAB

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -6,6 +6,10 @@
       </a>
     </md-toolbar>
 
+    <md-button class="md-fab md-primary"  style="" ng-click="import()" title="Import" ng-class="{importing: importing}">
+      <i class="fa fa-bars fa-2x"></i>
+    </md-button>
+
     <md-content>
       <a href ng-click="closeNav()" ui-sref="material.home" layout="row" layout-align="start center">
         <i class="fa fa-home fa-lg"></i>
