Material the connect page

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -6,7 +6,7 @@
       </a>
     </md-toolbar>
 
-    <md-button class="md-fab md-primary"  style="" ng-click="import()" title="Import" ng-class="{importing: importing}">
+    <md-button class="md-fab md-primary" ng-click="closeNav()">
       <i class="fa fa-bars fa-2x"></i>
     </md-button>
 
