Embiggen the nav

--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -25,8 +25,8 @@
       <h1 flex>Connect</h1>
 
       <form flex layout="row" layout-align="end center">
-        <md-text-float ng-model="nodeSearch"></md-text-float>
-        <i class="fa fa-search"></i>
+        <md-text-float ng-model="nodeSearch" style="font-size: 2em;"></md-text-float>
+        <i class="fa fa-2x fa-search"></i>
       </form>
     </div>
 
