--- a/public/pages/param-input.html
+++ b/public/pages/param-input.html
@@ -4,7 +4,8 @@
             ng-hide="paramDefinition.hidden"
             label="{{paramDefinition.displayName || paramDefinition.name}}"
             type="{{inputType(paramDefinition.type)}}"
-            ng-model="params[paramDefinition.name]" >
+            ng-model="params[paramDefinition.name]"
+            required="{{paramDefinition.required}}" >
         </md-text-float>
         <div ng-if="paramDefinition.schema">        
             <schema-editor schema="paramDefinition.schema" model="params[paramDefinition.name]" allow-json-edit="true" additional-properties="true"></schema-editor>
