--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -10,80 +10,82 @@
 
 <br>
 
-<div flex class="container">
-  <div class="row device-detail">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <div class="row">
-        <div class="col-xs-6">
-          <h2>
-            <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
-            {{device.name}}
-          </h2>
-          <h4 class="text-muted">
-            {{device.uuid}}
-            <button ng-click="showToken = !showToken" class="btn btn-xs btn-default" title="Show Token"><i class="fa fa-key"></i></button>
-            <span ng-show="showToken" class="text-success" title="Device Token">{{device.token}}</span>
-          </h4>
+<md-content>
+  <div flex class="container">
+    <div class="row device-detail">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="row">
+          <div class="col-xs-6">
+            <h2>
+              <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
+              {{device.name}}
+            </h2>
+            <h4 class="text-muted">
+              {{device.uuid}}
+              <button ng-click="showToken = !showToken" class="btn btn-xs btn-default" title="Show Token"><i class="fa fa-key"></i></button>
+              <span ng-show="showToken" class="text-success" title="Device Token">{{device.token}}</span>
+            </h4>
+          </div>
+
+          <div class="col-xs-6">
+            <h2 class="text-right">
+              <a class="btn btn-danger btn-lg" title="Delete" ng-click="deleteDevice(device)">
+                <i class="fa fa-trash-o fa-lg"></i>
+              </a>
+            </h2>
+          </div>
         </div>
 
-        <div class="col-xs-6">
-          <h2 class="text-right">
-            <a class="btn btn-danger btn-lg" title="Delete" ng-click="deleteDevice(device)">
-              <i class="fa fa-trash-o fa-lg"></i>
-            </a>
-          </h2>
+        <div>
+          <message-grapher device="device.uuid"></message-grapher>
         </div>
+
+        <section class="col-xs-12">
+          <tabset>
+            <tab heading="Properties">
+              <div ng-include="'/pages/connector/devices/detail/device-properties.html'"></div>
+            </tab>
+            <tab heading="Accessible By">
+              <div ng-include="'/pages/connector/devices/detail/device-target-permissions.html'"></div>
+            </tab>
+            <tab heading="Controls">
+              <div ng-include="'/pages/connector/devices/detail/device-source-permissions.html'"></div>
+            </tab>
+            <tab heading="Groups">
+              <ul class="list-group">
+                <div class="panel panel-default col-xs-6">
+                  <div class="panel-heading">
+                    Access Groups
+                  </div>
+                  <div class="panel-body">
+                    <ul class="list-group">
+                      <li class="list-group-item" ng-repeat="group in targetGroups | orderBy: group.name">
+                        <a href ui-sref="material.admin.detail({uuid : group.uuid})">{{group.name}}</a>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+                <div class="panel panel-default col-xs-6">
+                  <div class="panel-heading">
+                    Control Groups
+                  </div>
+                  <div class="panel-body">
+                    <ul class="list-group">
+                      <li class="list-group-item" ng-repeat="group in sourceGroups | orderBy: group.name">
+                        <a href ui-sref="material.admin.detail({uuid : group.uuid})">{{group.name}}</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </ul>
+            </tab>
+            <tab heading="Messaging">
+              <div ng-controller="MessagingDeviceController" ng-include="'/pages/connector/devices/detail/messaging.html'"></div>
+            </tab>
+          </tabset>
+        </section>
       </div>
-
-      <div>
-        <message-grapher device="device.uuid"></message-grapher>
-      </div>
-
-      <section class="col-xs-12">
-        <tabset>
-          <tab heading="Properties">
-            <div ng-include="'/pages/connector/devices/detail/device-properties.html'"></div>
-          </tab>
-          <tab heading="Accessible By">
-            <div ng-include="'/pages/connector/devices/detail/device-target-permissions.html'"></div>
-          </tab>
-          <tab heading="Controls">
-            <div ng-include="'/pages/connector/devices/detail/device-source-permissions.html'"></div>
-          </tab>
-          <tab heading="Groups">
-            <ul class="list-group">
-              <div class="panel panel-default col-xs-6">
-                <div class="panel-heading">
-                  Access Groups
-                </div>
-                <div class="panel-body">
-                  <ul class="list-group">
-                    <li class="list-group-item" ng-repeat="group in targetGroups | orderBy: group.name">
-                      <a href ui-sref="material.admin.detail({uuid : group.uuid})">{{group.name}}</a>
-                    </li>
-
-                  </ul>
-                </div>
-              </div>
-              <div class="panel panel-default col-xs-6">
-                <div class="panel-heading">
-                  Control Groups
-                </div>
-                <div class="panel-body">
-                  <ul class="list-group">
-                    <li class="list-group-item" ng-repeat="group in sourceGroups | orderBy: group.name">
-                      <a href ui-sref="material.admin.detail({uuid : group.uuid})">{{group.name}}</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </ul>
-          </tab>
-          <tab heading="Messaging">
-            <div ng-controller="MessagingDeviceController" ng-include="'/pages/connector/devices/detail/messaging.html'"></div>
-          </tab>
-        </tabset>
-      </section>
     </div>
   </div>
-</div>
+</md-content>
