Blue bar for the designer

--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -14,7 +14,7 @@
           <i class="fa fa-plus-circle fa-lg"></i>
         </button>
         <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" title="Debug Console" tooltip="Debug Console" tooltip-placement="top">
-          <i class="fa fa-code fa-lg"></i>
+          <i class="fa fa-bug fa-lg"></i>
         </button>
       </div>
 
