--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -1,8 +1,8 @@
 <div class="floating-omnibox">
   <div class="floating-omnibox-input input-group">
-    <input type="text" ng-model="omniSearch" placeholder="Search" typeahead="item as item.name for item in omniList | filter : {name : $viewValue }" typeahead-template-url="/pages/omnibox-item.html" class="input form-control omnibox button-shadow">
-    <span class="input-group-btn">
-      <button class="btn btn-primary button-shadow" type="button"><i class="fa fa-search"></i></button>
+    <input type="text" ng-model="omniSearch" placeholder="Search" typeahead="item as item.name for item in omniList | filter : {name : $viewValue }" typeahead-template-url="/pages/omnibox-item.html" class="input form-control omnibox">
+    <span class="input-group-addon">
+      <i class="fa fa-lg fa-search"></i>
     </span>
   </div>
 </div>
