--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -6,20 +6,22 @@
   <flow-node-setup  node-type="activeFlow.selectedFlowNode"></flow-node-setup>
   <flow-node-editor flow-node="activeFlow.selectedFlowNode"></flow-node-editor>
 
-  <div class="flow-top-bar" layout="row" layout-phone="column" layout-tablet="column">
-    <div flex layout="row">
-      <button class="btn btn-default button-shadow" title="Menu" tooltip="Menu" tooltip-placement="left" ng-click="toggleNav()">
+  <md-toolbar md-theme="octo-blue" class="flow-top-bar" layout="row" layout-phone="column" layout-tablet="column">
+    <div flex layout="row" class="md-toolbar-tools">
+      <a href class="menu-icon" ng-click="toggleNav()">
         <i class="fa fa-bars"></i>
-      </button>
+      </a>
 
       <flow-editor-omnibox flex omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
     </div>
 
-    <div flex layout="row" layout-align="end">
+    <div flex layout="row" class="md-toolbar-tools" layout-align="end">
       <div class="input-group flow-name dropdown">
-        <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
-        <span class="input-group-addon flow-dropdown dropdown-toggle" id="flowMenuDropdown" data-toggle="dropdown"  ng-click="flowMenuIsOpen = !flowMenuIsOpen">
-          <i class="fa fa-lg fa-angle-down"></i>
+        <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name" style="border-right: 0px;">
+        <span class="input-group-btn flow-dropdown dropdown-toggle" id="flowMenuDropdown" data-toggle="dropdown"  ng-click="flowMenuIsOpen = !flowMenuIsOpen" style="border-left: 0px;">
+          <button class="btn btn-white">
+            <i class="fa fa-lg fa-angle-down"></i>
+          </button>
         </span>
         <ul class="dropdown-menu" role="menu" aria-labelledby="flowMenuDropdown" style="max-height: {{flowSelectorHeight}}px;">
           <li class="text-center" data-toggle="dropdown" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
@@ -31,44 +33,44 @@
       </div>
     </div>
 
-    <div flex="0" layout="row" layout-align="end" class="flow-controls">
-      <div flex>
-        <md-button ng-click="deleteFlow(activeFlow)" md-theme="default">
+    <div flex="0" layout="row" layout-align="end" class="flow-controls md-toolbar-tools">
+      <div flex layout="row">
+        <md-button ng-click="deleteFlow(activeFlow)">
           <md-tooltip>Delete Flow</md-tooltip>
-          <i class="fa fa-lg fa-trash-o"></i>
+          <i class="fa fa-lg fa-trash"></i>
         </md-button>
 
-        <md-button ng-click="createTemplate(activeFlow)" md-theme="default">
+        <md-button ng-click="createTemplate(activeFlow)">
           <md-tooltip>Create a Template</md-tooltip>
           <i class="fa fa-lg fa-share-alt"></i>
         </md-button>
       </div>
 
-      <div flex>
-        <md-button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}" md-theme="default">
+      <div flex layout="row">
+        <md-button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}">
           <md-tooltip>Zoom Out</md-tooltip>
           <i class="fa fa-minus"></i>
         </md-button>
 
-        <md-button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}" md-theme="default">
+        <md-button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}">
           <md-tooltip>Zoom In</md-tooltip>
           <i class="fa fa-plus"></i>
         </md-button>
       </div>
 
-      <div flex>
-        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }" md-theme="default">
+      <div flex layout="row">
+        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }">
           <md-tooltip>Stop</md-tooltip>
           <i class="fa fa-stop"></i>
         </md-button>
 
-        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }" md-theme="default">
+        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }">
           <md-tooltip>Start</md-tooltip>
           <i class="fa fa-play"></i>
         </md-button>
       </div>
     </div>
-  </div>
+  </md-toolbar>
 
   <div class="workspace-container" flex layout-fill layout="column" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection}" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
     <flow-editor flow="activeFlow"></flow-editor>
