--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -59,12 +59,12 @@
       </div>
 
       <div flex layout="row">
-        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }">
+        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false, stopping: stopping }">
           <md-tooltip>Stop</md-tooltip>
           <i class="fa fa-stop"></i>
         </md-button>
 
-        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }">
+        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-playing': deviceOnline, deploying: deploying }">
           <md-tooltip>Start</md-tooltip>
           <i class="fa fa-play"></i>
         </md-button>
