--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -33,8 +33,8 @@
       </div>
     </div>
 
-    <div flex="0" layout="row" layout-align="end" class="flow-controls md-toolbar-tools">
-      <div flex layout="row">
+    <div flex="0" flex-phone="95" flex-tablet="95" layout="row" layout-align="end" class="flow-controls md-toolbar-tools" style="min-height: 50px;">
+      <div flex layout="row" layout-align="center">
         <md-button ng-click="deleteFlow(activeFlow)">
           <md-tooltip>Delete Flow</md-tooltip>
           <i class="fa fa-lg fa-trash"></i>
@@ -46,7 +46,7 @@
         </md-button>
       </div>
 
-      <div flex layout="row">
+      <div flex layout="row" layout-align="center">
         <md-button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}">
           <md-tooltip>Zoom Out</md-tooltip>
           <i class="fa fa-minus"></i>
@@ -58,7 +58,7 @@
         </md-button>
       </div>
 
-      <div flex layout="row">
+      <div flex layout="row" layout-align="center">
         <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false, stopping: stopping }">
           <md-tooltip>Stop</md-tooltip>
           <i class="fa fa-stop"></i>
