add pluck capability to sentiment

--- a/public/pages/node_forms/sentiment_form.html
+++ b/public/pages/node_forms/sentiment_form.html
@@ -1,1 +1,2 @@
 <md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-text-float label="Value" ng-model="flowNode.value"> </md-text-float>
