--- a/public/pages/node_forms/pluck_form.html
+++ b/public/pages/node_forms/pluck_form.html
@@ -1,2 +1,2 @@
 <md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
-<md-text-float label="Key" ng-model="flowNode.key" required> </md-text-float>
+<md-text-float label="Value" ng-model="flowNode.value" required> </md-text-float>
