show online color for flow list

--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -2,7 +2,7 @@
   <div class="floating-omnibox-input input-group">
     <input type="text" ng-model="omniSearch" placeholder="Search" typeahead="item as item.name for item in omniList | filter : {name : $viewValue }" typeahead-template-url="/pages/omnibox-item.html" class="input form-control omnibox">
     <span class="input-group-addon">
-      <i class="fa fa-lg fa-search"></i>
+      <i class="fa fa-lg fa-search input-addon"></i>
     </span>
   </div>
 </div>
