--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,50 +1,51 @@
-  <div flex layout="column">
-    <div flex layout="row">
-      <div flex="30" layout="column">
-        <md-toolbar md-theme="octo-blue">
-          <h2 class="md-toolbar-tools page-heading">
-            <a href class="menu-icon" ng-click="toggleNav()">
-              <i class="fa fa-bars"></i>
-            </a>
+<div class="templates" layout-fill layout="column" >
+  
+  <md-toolbar>
+  <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
+  <div flex layout="row">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <i class="fa fa-bars"></i>
+      Templates
+    </a>
+  </div>
+  <md-button ng-click="confirmDeleteTemplate(currentTemplate.uuid)">
+  <md-tooltip>Delete Template</md-tooltip>
+  Delete Template
+  </md-button>
+  </h2>
+  </md-toolbar>
+  <div layout="row" layout="column" layout-fill flex>
+    
+    <md-content flex layout="column" style="padding: 3px; background-color: #ddd" flex="30" layout="column" class="templates-list">
+    <div class="grid-item" ng-repeat="template in templates" layout="column" ng-class="{selected: (template === currentTemplate)}">
+      <div flex layout="row" style="padding: 0 10px;" ng-click="setCurrentTemplate(template)">
+        <section flex style="padding: 10px;">
+          <h3 style="padding: 0; margin: 5px 0;">{{template.name}}</h3>
+          <h4 style="padding: 0; margin: 5px 0;">{{template.created | date: 'short'}}</h4>
+        </section>
+      </div>
+    </div>
+    </md-content>
+    <div flex="70" class="template-preview" layout="column">
+      <flow-editor flow="currentTemplate.flow" readonly="true" flex></flow-editor>
+      <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: calc(100%/2 - 28px); right: 28px">
+      <md-tooltip>Copy to Clipboard</md-tooltip>
+      <i class="fa fa-share-alt fa-2x"></i>
+      </md-button>
 
-            <span>Templates</span>
-          </h2>
-        </md-toolbar>
-
-        <md-content flex layout="column" style="padding: 3px; background-color: #ddd">
-          <div class="grid-item" ng-repeat="template in templates" layout="column" ng-class="{selected: (template === currentTemplate)}">
-            <div flex layout="row" style="padding: 0 10px;" ng-click="setCurrentTemplate(template)">
-              <section flex style="padding: 10px;">
-                <h3 style="padding: 0; margin: 5px 0;">{{template.name}}</h3>
-                <h4 style="padding: 0; margin: 5px 0;">{{template.created | date: 'short'}}</h4>
-              </section>
-            </div>
+      <div flex layout-padding>
+        <md-text-float label="Name" ng-model="currentTemplate.name"> </md-text-float>
+        <md-content flex layout="row" layout-wrap="wrap" layout-align="space-around" ng-class="{importing: importing}">
+        <div layout="column" ng-repeat="material in billOfMaterials">
+          <div class="bill-of-materials-icon" ng-style="{ 'background-image': 'url(' + material.logo + ')' }">
           </div>
+          <div class="md-tile-content">
+            <h3 class="text-center">{{material.name}}</h3>
+          </div>
+        </div>
         </md-content>
       </div>
 
-      <div layout-fill flex="70" layout="column">
-        <div flex layout="column">
-          <a ng-click="confirmDeleteTemplate(currentTemplate.uuid)" style="position: absolute; right: 20px; top: 10px">
-            <md-tooltip>Delete Template</md-tooltip>
-            <i class="fa fa-trash fa-2x"></i>
-          </a>
-          <flow-editor flow="currentTemplate.flow" readonly="true"></flow-editor>
-
-          <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: calc(100%/2 - 28px); right: 28px">
-            <md-tooltip>Copy to Clipboard</md-tooltip>
-            <i class="fa fa-share-alt fa-2x"></i>
-          </md-button>
-        </div>
-
-        <div flex style="background-color: white;" layout="column">
-          <div flex layout-padding>
-            <form>
-              <md-text-float label="Name" ng-model="currentTemplate.name"> </md-text-float>
-            </form>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
