Redesign home page

--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -9,7 +9,8 @@
 
     <md-button ui-sref="material.nodewizard.addnode" md-theme="octo-blue">
       <md-tooltip>Add New Node</md-tooltip>
-      Add New Node
+      <i class="fa fa-plus"></i>
+      Add Node
     </md-button>
   </h2>
 </md-toolbar>
