--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -1,6 +1,6 @@
 <div>
   <div class="form-group">
-    <input type="text" ng-model="endpointFilter">
+    <md-text-float label="Filter Endpoints" ng-model="endpointFilter">    
   </div>
   <div class="form-group">
     <label for="selectedEndpoint">Endpoint</label>
