Add more links to the home page

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -98,19 +98,20 @@
           </div>
         </div>
 
-        <div layout="row" layout-align="center">
-          <div flex="66" layout="column">
-            <hr>
-            <br>
-            <h3 class="text-center">
-              <a href="//developer.octoblu.com">Developer</a>
-              -
-              <a href="//gateblu.octoblu.com">Gateblu</a>
-              -
-              <a href="//hackster.io/octoblu">Tutorials</a>
-            </h3>
-          </div>
-        </div>
+        <h2 class="text-center home-footer">
+          Links to Resources
+        </h2>
+        <h3 class="text-center home-footer">
+          <a href="//developer.octoblu.com">Developer</a>
+          -
+          <a href="//gateblu.octoblu.com">Gateblu</a>
+          -
+          <a href="//hackster.io/octoblu">Tutorials</a>
+          -
+          <a href="//octoblu.com">Octoblu</a>
+          -
+          <a href="//citrix.com">Citrix</a>
+        </h3>
       </div>
     </div>
   </div>
