--- a/public/pages/node_forms/template_form.html
+++ b/public/pages/node_forms/template_form.html
@@ -3,5 +3,5 @@
 <br>
 <div class="form-group">
   <label for="template">Template</label>
-  <div id="template" ui-ace="{mode: 'handlebars', theme: 'chrome'}" class="code-editor" ng-model="flowNode.template"></div>
+  <div id="template" ui-ace="{theme: 'chrome'}" class="code-editor" ng-model="flowNode.template"></div>
 </div>
