Organize the links at the bottom better

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -96,22 +96,38 @@
               </div>
             </div>
           </div>
+          <div layout="row" layout-phone="column">
+            <div flex layout="column" class="app-quadrant">
+              <h2>Resources</h2>
+              <div layout="row" layout-align="center">
+                <p flex="80">
+                  <a href="//octoblu.com">Octoblu</a>
+                  <br>
+                  <a href="//citrix.com">Citrix</a>
+                </p>
+              </div>
+            </div>
+            <div flex layout="column" class="app-quadrant">
+              <h2>Communities</h2>
+              <div layout="row" layout-align="center">
+                <p flex="80">
+                  <a href="//developer.octoblu.com">Developer</a>
+                  <br>
+                  <a href="//gateblu.octoblu.com">Gateblu</a>
+                  <br>
+                  <a href="//hackster.io/octoblu">Tutorials</a>
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <h2 class="text-center home-footer">
-          Links to Resources
-        </h2>
-        <h3 class="text-center home-footer">
-          <a href="//developer.octoblu.com">Developer</a>
+        <br><br>
+        <h4 class="text-center">
+        Copyright &copy; 2014 Citrix Inc.
           -
-          <a href="//gateblu.octoblu.com">Gateblu</a>
-          -
-          <a href="//hackster.io/octoblu">Tutorials</a>
-          -
-          <a href="//octoblu.com">Octoblu</a>
-          -
-          <a href="//citrix.com">Citrix</a>
-        </h3>
+          <a href ui-sref="terms">Terms of Service</a>
+        </h4>
       </div>
     </div>
   </div>
