fixed pluck node

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -38,7 +38,7 @@
       <i class="fa fa-share-alt fa-2x"></i>
       </md-button>
 
-      <div flex layout-padding style="margin-left:25px;font-size:1.5em;">
+      <div flex layout-padding style="margin-left:25px;">
         <md-text-float label="Name" ng-model="currentTemplate.name"> </md-text-float>
         <md-content flex layout="row" layout-wrap="wrap" layout-align="space-around" ng-class="{importing: importing}">
         <div layout="column" ng-repeat="material in billOfMaterials">
