--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -16,8 +16,12 @@
   </md-toolbar>
   <div layout="row" layout="column md-whiteframe-z2" flex layout-align="center" >
     <md-content layout="column" flex="30" class="templates-list md-whiteframe-z1">
+        <div layout="row" layout-align="space-around center">
+          <md-text-float class="text-float-search" flex="90" label="Filter Templates" ng-model="templateSearch"></md-text-float>
+          <i class="fa fa-search fa-lg"></i>
+        </div>
       <md-list>
-        <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates" ng-click="setCurrentTemplate(template)">
+        <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}" ng-click="setCurrentTemplate(template)">
           <md-item-content>    
           <md-button flex layout="row" layout-align="start">      
               <img src="https://ds78apnml6was.cloudfront.net/device/flow.svg" height="40">            
