--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -8,10 +8,6 @@
         Templates
       </a>
     </div>
-    <md-button ng-click="confirmDeleteTemplate(currentTemplate.uuid)">
-      <md-tooltip>Delete Template</md-tooltip>
-      <i class="fa fa-trash fa-lg"></i>
-    </md-button>
     </h2>
   </md-toolbar>
   <div layout="row" layout="column md-whiteframe-z2" flex layout-align="center" >
@@ -21,15 +17,16 @@
           <i class="fa fa-search fa-lg"></i>
         </div>
       <md-list>
-        <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}" ng-click="setCurrentTemplate(template)">
-          <md-item-content>    
-          <md-button flex layout="row" layout-align="start">      
+        <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}">
+          <md-item-content layout="row" layout-align="space-around">
+          <md-button flex layout="row" layout-align="start center" ng-click="setCurrentTemplate(template)">
               <img src="https://ds78apnml6was.cloudfront.net/device/flow.svg" height="40">            
               <div flex layout layout-align="space-between">
                 <h3>{{template.name}}</h3>
-                <h4>{{template.created | date: 'short'}}</h4>            
+                <h4>{{template.created | date: 'short'}}</h4>
             </div>     
-          </md-button>      
+          </md-button>
+          <i class="fa fa-ellipsis-v" style="padding:0px 10px; cursor:pointer;" ng-click="showTemplateOptions(template)"></i>
           </md-item-content>
           </md-item>
           </md-list>
@@ -37,9 +34,14 @@
 
     <div flex="65" class="template-preview md-whiteframe-z2" layout="column">
       <flow-editor flow="currentTemplate.flow" readonly="true" flex></flow-editor>
-      <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: calc(50%); right: 28px">
+      <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: 50%; right: 28px">
       <md-tooltip>Copy to Clipboard</md-tooltip>
       <i class="fa fa-share-alt fa-2x"></i>
+      </md-button>
+
+      <md-button class="md-fab md-warn" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" style="position:absolute; top: calc(50% + 84px); right: 28px">
+      <md-tooltip>Delete Template</md-tooltip>
+      <i class="fa fa-trash fa-2x"></i>
       </md-button>
 
       <div flex layout-padding style="margin-left:25px;">
