add help text for all nodes

--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,14 +1,17 @@
 <md-card layout="column" class="flow-node-editor ng-hide" ng-show="flowNode.resourceType === 'flow-node'">
   <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2><span>Edit Node</span></h2>
+        <h1>Edit > {{flowNode.name || flowNode.class}}</h1>
         <span flex></span>
-        <md-button ng-click="close()">Close</md-button>
+        <md-button ng-click="toggleHelp()"><i class="fa fa-lg fa-question"></i></md-button>
+        <md-button ng-click="close()"><i class="fa fa-lg fa-close"></i></md-button>
       </div>
     </md-toolbar>
     <md-content>
       <form style="padding:20px;" layout="column">
-        <div class="flow-node-form" ng-include="flowNode.formTemplatePath"></div>
+        <p class="help-block" ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
+        </p>
+        <div class="flow-node-form" ng-include="flowNodeType.formTemplatePath"></div>
         <br>
         <md-switch ng-model="flowNode.debug">Debug</md-switch>
       </form>
