--- a/public/pages/flow-browser-debug.html
+++ b/public/pages/flow-browser-debug.html
@@ -4,7 +4,7 @@
 <div ng-if="!viewSource">
   <h5 ng-if="flow.selectedFlowNode.name">Selected Node: {{ flow.selectedFlowNode.name }}</h5>
   <ul class="flow-browser-debug">
-    <li ng-repeat="debug in debugLines | filter : {$: flow.selectedFlowNode.id}">
+    <li ng-repeat="debug in debugLines | filter : filterDebugLines">
     	<small>{{ debug.date | date: 'short'}} - {{ debug.message.name }}</small>
       <prism code="debug.message"></prism>
     </li>
