--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -8,23 +8,14 @@
   </h2>
 </md-toolbar>
 
-<div layout="column" layout-fill flex class="flow-image-but-really-the-flow" ng-class="{importing: importing}">
+<div layout="column" layout-fill flex class="flow-image-but-really-the-flow flow-importing" ng-class="{importing: importing}">
   <div flex layout="column">
     <flow-editor flow="template.flow" readonly="true"></flow-editor>
 
     <md-button class="md-fab md-primary"  style="position:fixed; bottom: 260px; right: 28px" ng-click="import()" title="Import" ng-class="{importing: importing}">
       <i class="fa fa-cloud-download fa-2x"></i>
     </md-button>
-
-    <md-content class="bill-of-materials" flex layout="row" layout-wrap="wrap" layout-align="space-around" ng-class="{importing: importing}">
-      <div layout="column" ng-repeat="material in billOfMaterials">
-        <div class="bill-of-materials-icon" ng-style="{ 'background-image': 'url(' + material.logo + ')' }">
-        </div>
-        <div class="md-tile-content">
-          <h3 class="text-center">{{material.name}}</h3>
-        </div>
-      </div>
-    </md-content>
+    <bill-of-materials materials="billOfMaterials"></bill-of-materials>
   </div>
 </div>
 
