--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -11,52 +11,41 @@
     </h2>
   </md-toolbar>
   <div layout="row" layout="column md-whiteframe-z2" flex layout-align="center" >
-  <div layout="column" flex="30" class="templates-list md-whiteframe-z1">
+    <div layout="column" flex="30" class="templates-list md-whiteframe-z1">
       <div layout="row" layout-align="space-around center" style="margin:20px 0 40px 0;">
         <md-text-float class="text-float-search" flex="90" label="Filter Templates" ng-model="templateSearch"></md-text-float>
         <i class="fa fa-search fa-lg"></i>
       </div>
-    <md-list style="overflow-y:scroll;">
-      <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}">
-        <md-item-content layout="row" layout-align="space-around">
-        <md-button flex layout="row" layout-align="start center" ng-click="setCurrentTemplate(template)">
-            <img src="https://ds78apnml6was.cloudfront.net/device/flow.svg" height="40">            
-            <div flex layout layout-align="space-between">
-              <h3>{{template.name}}</h3>
-              <h4>{{template.created | date: 'short'}}</h4>
-          </div>     
-        </md-button>
-        </md-item-content>
-      </md-item>
-    </md-list>
-  </div>
-
+      <md-list style="overflow-y:scroll;">
+        <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}">
+          <md-item-content layout="row" layout-align="space-around">
+          <md-button flex layout="row" layout-align="start center" ng-click="setCurrentTemplate(template)">
+              <img src="https://ds78apnml6was.cloudfront.net/device/flow.svg" height="40">            
+              <div flex layout layout-align="space-between">
+                <h3>{{template.name}}</h3>
+                <h4>{{template.created | date: 'short'}}</h4>
+            </div>     
+          </md-button>
+          </md-item-content>
+        </md-item>
+      </md-list>
+    </div>
 
     <div flex="65" class="template-preview md-whiteframe-z2" layout="column">
       <flow-editor flow="currentTemplate.flow" readonly="true" flex></flow-editor>
       <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: 50%; right: 28px">
       <md-tooltip>Copy to Clipboard</md-tooltip>
-      <i class="fa fa-share-alt fa-2x"></i>
+        <i class="fa fa-share-alt fa-2x"></i>
       </md-button>
 
       <md-button class="md-fab md-warn" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" style="position:absolute; top: calc(50% + 84px); right: 28px">
-      <md-tooltip>Delete Template</md-tooltip>
-      <i class="fa fa-trash fa-2x"></i>
+        <md-tooltip>Delete Template</md-tooltip>
+        <i class="fa fa-trash fa-2x"></i>
       </md-button>
-
-      <div flex layout-padding style="margin-left:25px;">
+      <div flex layout-fill layout="column" style="margin-left:25px;">
         <md-text-float label="Name" ng-model="currentTemplate.name"> </md-text-float>
-        <md-content flex layout="row" layout-wrap="wrap" layout-align="space-around" ng-class="{importing: importing}">
-        <div layout="column" ng-repeat="material in billOfMaterials">
-          <div class="bill-of-materials-icon" ng-style="{ 'background-image': 'url(' + material.logo + ')' }">
-          </div>
-          <div class="md-tile-content">
-            <h3 class="text-center">{{material.name}}</h3>
-          </div>
-        </div>
-        </md-content>
+        <bill-of-materials materials="billOfMaterials"></bill-of-materials>
       </div>
-
     </div>
   </div>
 </div>
