--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -15,7 +15,7 @@
     <md-button class="md-fab md-primary"  style="position:fixed; bottom: 260px; right: 28px" ng-click="import()" title="Import" ng-class="{importing: importing}">
       <i class="fa fa-cloud-download fa-2x"></i>
     </md-button>
-    <bill-of-materials materials="billOfMaterials"></bill-of-materials>
+    <bill-of-materials flow="template.flow"></bill-of-materials>
   </div>
 </div>
 
