Update generic microblu form to use value, not key

--- a/public/pages/node_forms/generic_microblu_form.html
+++ b/public/pages/node_forms/generic_microblu_form.html
@@ -9,8 +9,8 @@
 </div>
 
 <div class="form-group">
-  <label class="form-label" for="key">Key</label>
-  <input id="key" class="form-control" ng-model="flowNode.key" type="text">
+  <label class="form-label" for="value">Value</label>
+  <input id="value" class="form-control" ng-model="flowNode.value" type="text">
 </div>
 
 <div class="form-group">
