--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
 <footer></footer>
 
-<script src="//d1g8h12lk9ydf.cloudfront.net/js/v1.8.0/skynet.bundle.js"></script>
+<script src="//d1g8h12lk9ydf.cloudfront.net/js/v1.9.0/meshblu.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
 
